kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__logic_expr_6.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"not False or a > 0 and b is True\"####)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: Unary(
                    UnaryExpr {
                        op: Not,
                        operand: Node {
                            node: NameConstantLit(
                                NameConstantLit {
                                    value: False,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 4,
                            end_line: 1,
                            end_column: 9,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 9,
            },
            op: Bin(
                Or,
            ),
            right: Node {
                node: Binary(
                    BinaryExpr {
                        left: Node {
                            node: Compare(
                                Compare {
                                    left: Node {
                                        node: Identifier(
                                            Identifier {
                                                names: [
                                                    Node {
                                                        node: "a",
                                                        filename: "",
                                                        line: 1,
                                                        column: 13,
                                                        end_line: 1,
                                                        end_column: 14,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 13,
                                        end_line: 1,
                                        end_column: 14,
                                    },
                                    ops: [
                                        Gt,
                                    ],
                                    comparators: [
                                        Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        0,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 17,
                                            end_line: 1,
                                            end_column: 18,
                                        },
                                    ],
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 13,
                            end_line: 1,
                            end_column: 32,
                        },
                        op: Bin(
                            And,
                        ),
                        right: Node {
                            node: Compare(
                                Compare {
                                    left: Node {
                                        node: Identifier(
                                            Identifier {
                                                names: [
                                                    Node {
                                                        node: "b",
                                                        filename: "",
                                                        line: 1,
                                                        column: 23,
                                                        end_line: 1,
                                                        end_column: 24,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 23,
                                        end_line: 1,
                                        end_column: 24,
                                    },
                                    ops: [
                                        Is,
                                    ],
                                    comparators: [
                                        Node {
                                            node: NameConstantLit(
                                                NameConstantLit {
                                                    value: True,
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 28,
                                            end_line: 1,
                                            end_column: 32,
                                        },
                                    ],
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 23,
                            end_line: 1,
                            end_column: 32,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 13,
                end_line: 1,
                end_column: 32,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 32,
}

